--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@
 /* Add padding to containers */
 .container {
   padding: 16px;
+  .h1{
+  color: #827ffe;
 }
+}
+
 
 /* Full-width input fields */
 input[type=text], input[type=password] {
