--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ a:hover {
 /*---------------------------------------------*/
 h1,h2,h3,h4,h5,h6 {
 	margin: 0px;
+  color: #827ffe;
 }
 
 p {
@@ -420,6 +421,10 @@ iframe {
     visibility: visible;
     opacity: 1;
   }
+}
+
+.hr{
+  color: #827ffe;
 }
 
 
