--- a/css/util.css
+++ b/css/util.css
@@ -202,9 +202,9 @@
 .fs-199 {font-size: 199px;}
 .fs-200 {font-size: 200px;}
 
-/*[ PADDING ]
+[ PADDING ]
 ///////////////////////////////////////////////////////////
-*/
+
 .p-t-0 {padding-top: 0px;}
 .p-t-1 {padding-top: 1px;}
 .p-t-2 {padding-top: 2px;}
@@ -1210,9 +1210,9 @@
 .p-r-249 {padding-right: 249px;}
 .p-r-250 {padding-right: 250px;}
 
-/*[ MARGIN ]
+[ MARGIN ]
 ///////////////////////////////////////////////////////////
-*/
+
 .m-t-0 {margin-top: 0px;}
 .m-t-1 {margin-top: 1px;}
 .m-t-2 {margin-top: 2px;}
@@ -2225,7 +2225,7 @@
 
 /*[ TEXT ]
 ///////////////////////////////////////////////////////////
-*/
+
 /* ------------------------------------ */
 .text-white {color: white;}
 .text-black {color: black;}
@@ -2261,7 +2261,7 @@
 .lh-2-6 {line-height: 2.6;}
 .lh-2-7 {line-height: 2.7;}
 .lh-2-8 {line-height: 2.8;}
-.lh-2-9 {line-height: 2.9;}
+.lh-2-9 {line-height: 2.9;}*/
 
 
 
@@ -2415,7 +2415,7 @@
 /*[ Transition ]
 -----------------------------------------------------------
 */
-.trans-0-1 {
+/*.trans-0-1 {
 	-webkit-transition: all 0.1s;
     -o-transition: all 0.1s;
     -moz-transition: all 0.1s;
@@ -2462,7 +2462,7 @@
     -o-transition: all 1s;
     -moz-transition: all 1s;
     transition: all 1s;
-}
+}*/
 
 
 
@@ -2488,7 +2488,7 @@
 }
 
 /* ------------------------------------ */
-.flex-l {
+/*.flex-l {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -moz-box;
@@ -2531,10 +2531,10 @@
 	display: -ms-flexbox;
 	display: flex;
 	justify-content: space-between;
-}
+}*/
 
 /* ------------------------------------ */
-.flex-t {
+/*.flex-t {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -moz-box;
@@ -2572,10 +2572,10 @@
 	display: flex;
 	-ms-align-items: stretch;
 	align-items: stretch;
-}
+}*/
 
 /* ------------------------------------ */
-.flex-row {
+/*.flex-row {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: -moz-box;
@@ -2899,7 +2899,7 @@
 	-ms-align-items: stretch;
 	align-items: stretch;
 }
-
+*/
 
 /*[ Absolute ]
 -----------------------------------------------------------
@@ -2982,7 +2982,9 @@
 	right: 0px;
 	bottom: 0px;
 }
-
+.h1{
+  color: #827ffe;
+}
 
 
 
