--- a/style.css
+++ b/style.css
@@ -3,11 +3,16 @@
 /* Add padding to containers */
 .container {
   padding: 16px;
-  .h1{
-  color: #827ffe;
-}
 }
 
+.h1{
+  color: #827ffe;
+}
+
+.label{
+   color: #827ffe;
+ 
+}
 
 /* Full-width input fields */
 input[type=text], input[type=password] {
@@ -28,6 +33,7 @@ input[type=text]:focus, input[type=password]:focus {
 hr {
   border: 1px solid #f1f1f1;
   margin-bottom: 25px;
+  color : #827ffe;
 }
 
 /* Set a style for the submit/register button */
@@ -56,3 +62,4 @@ a {
   background-color: #f1f1f1;
   text-align: center;
 }
+
